--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body class="dark-page">
     <h1>Biorythm</h1> 
+    <form action="" method="get" class="form-example">
+        <div class="form-example">
+          <label for="birthdate">Enter your birthdate: </label>
+          <input type="date" name="birthdate" id="birthdate" required />
+          <div id="chartdiv" style="width: 100%; height: 500px;"></div>
+        </div>
+      </form>
     <div id="bio-chart" class="bio-result"></div>       
 </body>
 <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
