--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body class="dark-page">
-    <h1>Biorythm</h1> 
-    <form action="" method="get" class="form-example">
-        <div class="form-example">
+    <h1 id="mytitle">Biorythm</h1> 
+    <form>
+        <div>
+          <label for="username">Enter your name: </label>
+          <input name="username" required />
+        </div>
+        <div>
           <label for="birthdate">Enter your birthdate: </label>
-          <input type="date" name="birthdate" id="birthdate" required />
+          <input type="date" name="birthdate" required />
+        </div>
+        <div>
+          <label for="age">Your Age is: </label>
+          <input name="age" readonly>
         </div>
       </form>
+      <div class="vertical-padding"></div>
     <div id="bio-chart" class="bio-result"></div>       
 </body>
 <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
