Title updates using name entered.

--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
 </head>
 <body class="dark-page">
     <h1 id="mytitle">Biorythm</h1> 
-    <form>
-        <div>
-          <label for="username">Enter your name: </label>
-          <input name="username" required />
-        </div>
-        <div>
-          <label for="birthdate">Enter your birthdate: </label>
-          <input type="date" name="birthdate" required />
-        </div>
-        <div>
-          <label for="age">Your Age is: </label>
-          <input name="age" readonly>
-        </div>
+    <div class="center-aligned">
+      <form class="left-aligned">
+          <div>
+            <label for="username">Enter your name: </label>
+            <input name="username" required />
+          </div>
+          <div>
+            <label for="birthdate">Enter your birthdate: </label>
+            <input type="date" name="birthdate" required />
+          </div>
+          <div>
+            <label for="age">Your Age is: </label>
+            <input name="age" readonly>
+          </div>
       </form>
+    </div>
       <div class="vertical-padding"></div>
     <div id="bio-chart" class="bio-result"></div>       
 </body>
