--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <form class="left-aligned">
           <div>
             <label for="username">Enter your name: </label>
-            <input name="username" required />
+            <input name="username" class="wider" required />
           </div>
           <div>
             <label for="birthdate">Enter your birthdate: </label>
             <input type="date" name="birthdate" required />
           </div>
           <div>
-            <label for="age">Your Age is: </label>
+            <label for="age">Your age is: </label>
             <input name="age" readonly>
           </div>
       </form>
