--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
           </div>
           <div>
             <label for="age">Your age is: </label>
-            <input name="age" readonly>
+            <input name="age" class="narrower" readonly>
+            <span>years.</span>
           </div>
       </form>
     </div>
