--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <input name="username" class="wider" required />
           </div>
           <div>
-            <label for="birthdate">Enter your birthdate: </label>
-            <input type="date" name="birthdate" required />
+            <label for="birthday">Enter your birthday: </label>
+            <input type="date" name="birthday" required />
           </div>
           <div>
             <label for="age">Your age is: </label>
