--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biorythm</title>
+    <title>Biorhythm</title>
     <link rel="stylesheet" href="index.css" />
 </head>
 <body class="dark-page">
-    <h1 id="mytitle">Biorythm</h1> 
+    <h1 id="mytitle">Biorhythm</h1> 
     <div class="center-aligned">
       <form class="left-aligned">
           <div>
